<resources>
    <string name="app_name">Esteban</string>
    <string name="tAbout1">Esto es una aplicación diseñada exclusivamente para ti. La idea estaba clara: iba a ser una aplicación. El contenido era la parte más complicada. Al principio iba a ser una recopilación de memes graciosos de 9gag que me sirvieran para demostrar virtudes acerca de tu vida, de hecho el nombre original y que está registrado en GitHub es "MemEsdacj". El desarrollo comenzó el 6 de marzo de 2019. Sin embargo, una de las dificultades con las que nos encontramos fueron la inserción de gifs en una app personalizada, de modo que hubo que buscar otra idea lo más rápido posible. De ahí surgió mirar en el cajón con todos los recuerdos que tenía sobre mi vida a tu lado. Con eso, decidí insertarlos aquí y hacerte cómplice de algunos de los recuerdos más memorables que tengo a tu lado y que, por alguna razón u otra, fueron plasmados en fotografías que nos sirvieran para echar la vista atrás y detenernos un instante en todos aquellos momentos divertidos y tiernos.

        \n \n Sé que no es mucho, pero si alguien merecía algo como esto ese eres tú, sin duda, porque sabrías apreciar mejor que nadie cada uno de los fragmentos que se recopilan.</string>
    <string name="tAbout2">Y bueno, respecto al desarrollador... qué se puede decir de ese hombre con cara realmente perturbadora que intenta imitarte con una guitarrita que está hecha pedazos. Siempre quise ser como tú. Aprecio mucho todo lo que has hecho por mí durante los momentos buenos y sobre todo durante los malos, porque es donde más lecciones he podido sacar.

        \n \n Esta foto también me sirve para plasmar la tontería, esa que también aprendí de ti desde el primer momento y que tanto necesitamos en nuestras vidas para poder reírnos, primero de nosotros mismos y, después, de la vida en general.

        \n \n Gracias por hacer que una imagen así de boba fuera posible, y en gran medida es gracias a ti.</string>
    <string name="tAzuqueca1">Llegamos a uno de los puntos clave en tu vida. Azuqueca supuso un desafío completamente diferente de todo lo que conocías hasta entonces. No resultó nada sencillo, pero conseguiste sacar el máximo partido de la situación, como haces siempre, en realidad. Fueron pocos los días que tardaste en adaptarte al instituto, a las clases, los viajes en tren, los paseos en el skate y, ante todo, los que iban a ser tus nuevos compañeros. Algunos de ellos tuvieron la enorme suerte de poder contar contigo como amigo.</string>
    <string name="tAzuqueca2">Muchas son las anécdotas e historias en las que la diversión y el buen rollo fueron grandes protagonistas. Estoy seguro de que les descubriste una nueva forma de conocer a un amigo y ellos siempre lo apreciaron.</string>
    <string name="tAzuqueca3">Después vendrían más retos interesantes en tu vida profesional, acabarías Bachillerato, te presentarías a Selectividad, volverías a retomar las clases particulares e incluso te matricularías en la Universidad. Creo que, en gran parte, éstos son gracias a la fuerza que las nuevas personas que habías conocido meses atrás provocaron en ti.</string>
    <string name="tAzuqueca4">Es más que probable incluso que en la primera foto con tus amigos no sean siquiera de Azuqueca. Reconozco que me he perdido muchos momentos de esta etapa injustamente por mi parte, pero que sé que llevas bien guardado en el corazón. No obstante, considero que es una de las grandes experiencias que has vivido y que te han permitido crecer como persona. Por ello, se merecía un momento aparte.</string>
    <string name="tBachillerato1">He aquí algunas imágenes del final en nuestra etapa como compañeros de clase: el último año en que hemos compartido pupitre uno al lado del otro. Como bien sabrás, comenzamos aquel curso en el fondo de la clase, en la esquina más alejada de toda el aula.</string>
    <string name="tBachillerato2">No obstante, poco tiempo pasó hasta que nos decidimos por "avanzar un poco más". Le robamos el sitio a dos tíos que ni se dignaban a venir a clase y eso nos permitió conocer a una de las personas más cachondas que he tenido el placer de conocer, se trata del "Cansino Histórico", de David. ¡La de veces que nos habremos metido entre nosotros! Pudre colchones, tuerce botas, cuello burro... hubo tantos que ya ni me acuerdo.</string>
    <string name="tBachillerato3">Lo que sí sé es que este tío estaba puto colgado, así que fue el integrante perfecto para compartir con él nuestras vivencias. Buena fe de ello da aquellos partidos al FIFA en mi casa, en la que en más de una ocasión hemos acabado por el suelo muriéndonos de risa, figuradamente.</string>
    <string name="tBachillerato4">También aprecio el día en el que fuimos a jugar al fútbol de verdad (el día de "la teoría de cuerdas" del tala bosques Rubén), la Gameboy y el Zelda, las horas gastadas en el Top Eleven junto con el Rubitascachondas de Dani. Pasaron muchas cosas esos días y muchos de ellos tienen tu sello personal.</string>
    <string name="tConcierto1">Este momento bien puede valer su peso en oro. Se trata de nada más y nada menos que aquel concierto a finales de octubre de dos mil doce. Cuando Yulia y tú os hicisteis dueños del escenario durante aquella hora mágica.

        \n \n Si bien es cierto que no fue el último que concedisteis, sí que fue el primero, al menos para mí. La música siempre ha sido una de tus virtudes, desde plantándote ante un grupo de personas deseando escucharte hasta transmitiendo los fundamentos de ésta a quienes desean adentrarse en este mundo.</string>
    <string name="tConcierto2">Aquel fue una de las pocas oportunidades que he tenido para demostrarte mi apoyo incondicional, ese que tantas veces tú habías mostrado por mi figura. (La foto no tiene nada que ver con el momento, pero si me sirve para mostrar vuestra amistad) Yulia cantó como un ángel caído del cielo y tú tocabas como el ángel que le acompañaba en su descenso a lo terrenal, aunque en lugar de un arpa tenías una guitarra, la mejora fue más que evidente.

        \n \n Tal vez no te diste cuenta en aquel momento, pero el pabellón entero estaba con vosotros, desde aquellos desconocidos en primera fila que lo estaban dando todo hasta los tímidos del fondo donde se encontraban parte de tus amigos como Diego además de un servidor, pasando desde luego por Sandra, ¡aquel día estaba desatada, la muchacha!</string>
    <string name="tConociendote1">No obstante, no fue hasta una tarde de octubre en la que no comenzamos a soltar, al menos por mi parte, los grilletes del compañerismo para poder descubrir el lado más personal, el lado más humano y el que nos distinguía de la gente corriente el uno del otro.</string>
    <string name="tConociendote2">Aun doy gracias porque en aquella quedada con Sara y los chicos del colegio no viniera nadie (aunque suene irónico) porque eso permitió armarme de valentía, coger el móvil y llamar al que tiempo más tarde podría considerar mi mejor amigo durante muchos años.</string>
    <string name="tConociendote3">Recuerdo aquel paseo, charlando sobre IT un día nublado y paseando por un parque donde la oscuridad se apoderaba del ambiente y la que nos hacía pensar cada vez con más fuerza en aquel payaso, haciéndonos evitar las alcantarillas a toda costa.</string>
    <string name="tConociendote4">La cantidad de anécdotas, historias, discusiones, confidencias, sensaciones y, sobre todo, risas que aquellos escalones de CaSara fueron testigos.</string>
    <string name="tConociendote5">Tengo la convicción de que mis mejores años como persona se quedaron allí y todo eso fue por aquel pequeño pero íntimo grupo que formábamos junto con Sara. Buena fe da de ello estas instantáneas tan bobas, como críos que éramos sin darnos cuenta de que estábamos aprendiendo a ser felices sin siquiera darnos cuenta.</string>
    <string name="tDenisa1">Entonces llegó ella, Denisa. Una nueva forma de conocer a una fantástica amiga. Una de las tres Marías, como me solías contar cuando me interesé por cómo os habíais conocido. Aún recuerdo aquella tarde de invierno hace ya más de tres años en la que aparecí bastante antes de lo previsto, por cierto, te sigo pidiendo perdón por ello. Sin embargo, tuve la ocasión de conocer a una mujer maravillosa, con sus virtudes y sus defectos como todos, pero con un muy buen rollo, capaz de abrazar a desconocidos como yo y acogerles como sus amigos.

        \n \n Puedo contar incluso las ocasiones que he tenido de hablar con ella, muy pocas de hecho y hace ya mucho tiempo, pero en cada conversación apreciaba que se trataba de una persona muy diferente al resto de las que había conocido. Tú también lo apreciaste y ella te compensó con todo su cariño, ternura y sobre todo locura. Porque ¿qué mejor que la locura para alguien que nació con ella?</string>
    <string name="tDenisa2">Con todo ello, Denisa forma una muy importante parte de tu vida como tú formas parte de la suya. Y sí, no es precisamente un camino de rosas el que estáis atravesando juntos, pero me temo que la vida es así. Nos guste o no, tocará experimentar ciertas emociones. Estoy seguro de que habrá habido muchas noches en las que nada tenía sentido, en las que las lágrimas desbordaban el alma y se derramaban por vuestras mejillas. Noches en las que el orgullo pudo con el amor, en que nunca os atrevisteis a enviar ese mensaje de madrugada para tratar de aliviar las cosas. Las caras largas, los celos, la frustración, la inseguridad... todas esas cosas que nunca nos contaron en los cuentos.</string>
    <string name="tDenisa3">Pero entonces ahí aparecía lo mejor de vosotros mismos. Eso que os hace realmente únicos y que consigue que forméis una pareja de baile estupenda. Porque, a pesar de todo eso, siempre hay un motivo por el que enviar ese mensaje, por el que aparecer por sorpresa, por el que pedir perdón, por el que al final recordáis que vuestras diferencias no son nada en comparación con lo mucho que tenéis en común y que compartís. Os habéis complementado el uno al otro y os habéis puesto a prueba mutuamente, así es como se consigue avanzar, como se madura. Vuestro carácter habrá cambiado, sí, pero siempre es a mejor. Nunca os resultó sencillo estar juntos y aun así os ha permitido crecer tanto como compañeros, como amigos e incluso como personas.

        \n \n Y perdona si me he alejado demasiado de la realidad, al fin y al cabo, este fragmento es más una sensación mía más que un recuerdo en concreto. Todo lo que se podría destacar de este momento no resultaría posible explicarlo con palabras, por eso me basta con que esté presente en tu pecho, que es el mejor lugar donde poder guardar todos estos sentimientos.</string>
    <string name="tMessenger1">Este es uno de los lugares donde comenzó todo: el por aquel entonces Messenger. Ya no recuerdo cómo acabamos con el correo electrónico del otro (creo que fue a través de una notita arrancada de un cuaderno en clase de inglés en primero), pero sí de todas las conversaciones importantes que mantuvimos (y no tan importantes, llenas de cosas de niños). Aquello fue una manera de llevar fuera del aula aquella relación de compañeros que empezaba a surgir ante nosotros.</string>
    <string name="tInstruccionesTitulo">Uso de la aplicación</string>
    <string name="btDownload_image">Guardar imagen</string>
    <string name="btWatch_video">Ver vídeo</string>
    <string name="action_go_home">Volver al inicio</string>
    <string name="action_about">Acerca de</string>
    <string name="action_spotify">Spotify</string>
    <string name="action_github">Código en GitHub</string>
    <string name="navigation_home">Inicio</string>
    <string name="navigation_messenger">Messenger League</string>
    <string name="navigation_hockey">Hockey</string>
    <string name="navigation_concierto">Concierto</string>
</resources>