<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Menú de los tres puntitos con sus diferentes acciones. -->

    <item
        android:id="@+id/actionbar_go_home"
        android:orderInCategory="100"
        android:title="@string/action_go_home"
        app:showAsAction="never" />

    <item
        android:id="@+id/actionbar_spotify"
        android:orderInCategory="200"
        android:title="@string/action_spotify"
        app:showAsAction="never" />

    <item
        android:id="@+id/actionbar_howto"
        android:orderInCategory="300"
        android:title="@string/tInstruccionesTitulo"
        app:showAsAction="never" />

    <item
        android:id="@+id/actionbar_github"
        android:orderInCategory="400"
        android:title="@string/action_github"
        app:showAsAction="never" />

    <item
        android:id="@+id/actionbar_about"
        android:orderInCategory="500"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
