<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_home"
                android:title="@string/navigation_home" />
            <item
                android:id="@+id/nav_messenger"
                android:icon="?android:attr/listChoiceIndicatorSingle"
                android:title="@string/navigation_messenger" />
            <item
                android:id="@+id/nav_hockey"
                android:icon="?android:attr/listChoiceIndicatorSingle"
                android:title="@string/navigation_hockey" />
            <item
                android:id="@+id/nav_concierto"
                android:icon="?android:attr/listChoiceIndicatorSingle"
                android:title="@string/navigation_concierto" />
        </group>

</menu>
