<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:textAlignment="center">


            <TextView
                android:text="@string/tDenisa1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textIsSelectable="true" />

            <ImageView
                android:id="@+id/iv_denisa1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:onClick="clickImageDenisa1"/>

            <Button
                android:id="@+id/bDownload_Denisa1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/side_nav_bar"
                android:drawableLeft="@android:drawable/stat_sys_download"
                android:onClick="downloadImageDenisa1"
                android:text="@string/btDownload_image"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />


            <TextView
                android:text="@string/tDenisa2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textIsSelectable="true" />

            <ImageView
                android:id="@+id/iv_denisa2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:onClick="clickImageDenisa2"/>

            <Button
                android:id="@+id/bDownload_Denisa2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/side_nav_bar"
                android:drawableLeft="@android:drawable/stat_sys_download"
                android:onClick="downloadImageDenisa2"
                android:text="@string/btDownload_image"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />


            <TextView
                android:text="@string/tDenisa3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textIsSelectable="true" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>