<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:textAlignment="center">



            <TextView
                android:text="@string/tConociendote1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textIsSelectable="true" />


            <ImageView
                android:id="@+id/iv_Conociendote1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:onClick="clickImageConociendote1"/>

            <Button
                android:id="@+id/bDownload_Conociendote1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/side_nav_bar"
                android:drawableLeft="@android:drawable/stat_sys_download"
                android:onClick="downloadImageConociendote1"
                android:text="@string/btDownload_image"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />


            <TextView
                android:text="@string/tConociendote2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textIsSelectable="true" />


            <ImageView
                android:id="@+id/iv_Conociendote2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:onClick="clickImageConociendote2"/>

            <Button
                android:id="@+id/bDownload_Conociendote2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/side_nav_bar"
                android:drawableLeft="@android:drawable/stat_sys_download"
                android:onClick="downloadImageConociendote2"
                android:text="@string/btDownload_image"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />


            <TextView
                android:text="@string/tConociendote3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textIsSelectable="true" />

            <ImageView
                android:id="@+id/iv_Conociendote3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:onClick="clickImageConociendote3"/>

            <Button
                android:id="@+id/bDownload_Conociendote3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/side_nav_bar"
                android:drawableLeft="@android:drawable/stat_sys_download"
                android:onClick="downloadImageConociendote3"
                android:text="@string/btDownload_image"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />


            <TextView
                android:text="@string/tConociendote4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textIsSelectable="true" />

            <ImageView
                android:id="@+id/iv_Conociendote4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:onClick="clickImageConociendote4"/>

            <Button
                android:id="@+id/bDownload_Conociendote4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/side_nav_bar"
                android:drawableLeft="@android:drawable/stat_sys_download"
                android:onClick="downloadImageConociendote4"
                android:text="@string/btDownload_image"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />


            <TextView
                android:text="@string/tConociendote5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textIsSelectable="true" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>