<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:textAlignment="center">


            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tMessenger1"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />



            <ImageView
                android:id="@+id/iv_favor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:onClick="clickImageFavor"/>

            <Button
                android:id="@+id/bDownload_Favor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/side_nav_bar"
                android:drawableLeft="@android:drawable/stat_sys_download"
                android:onClick="downloadImageFavor"
                android:text="@string/btDownload_image"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />


            <Button
                android:id="@+id/bWatch_Favor1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@drawable/side_nav_bar"
                android:drawableLeft="@android:drawable/ic_media_play"
                android:onClick="watchVideoFavor1"
                android:text="@string/btWatch_video"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="2000dp"
                    tools:layout_editor_absoluteY="123dp" />

                <ImageView
                    android:id="@+id/iv_elcansi"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="bottom|left"
                    android:layout_weight="1"
                    android:adjustViewBounds="false"
                    android:foregroundGravity="bottom"
                    android:onClick="goTomasFalsas"
                    tools:layout_editor_absoluteX="2dp"
                    tools:layout_editor_absoluteY="338dp" />
            </LinearLayout>



        </LinearLayout>
    </ScrollView>
</RelativeLayout>